[HGIMG4] fvdir命令が正しく動作しなかった不具合を修正 [HGIMG4] gppbind命令にモデル形状のコリジョンを使用するオプションを追加 [HGIMG4] gppbind命令でモデルを指定した場合、中心座標がずれることがある不具合を修正 [HGIMG4] event_addang命令が正しく動作しなかった不具合を修正 [HGIMG4] テクスチャのαチャンネル値が低いピクセルは描画を破棄するように修正
Former-commit-id: 761d876035b63576143db25faffb407cb64d3ccc

--- a/package/win32/doclib/hgimg4.html
+++ b/package/win32/doclib/hgimg4.html
@@ -261,7 +261,7 @@
 	setalpha objid,value				オブジェクトの透明度(α値)設定
 	gplookat objid,x,y,z				指定座標に向けてノードを回転
 
-	gppbind objid,mass,friction			ノードに標準的な物理特性を設定
+	gppbind objid,mass,friction,option		ノードに標準的な物理特性を設定
 	gppset objid,prmid,x,y,z			ノードの物理パラメーターを設定
 	gppapply objid,action,x,y,z			ノードに物理的な力を適用する
 
@@ -1000,41 +1000,37 @@
 	物理設定を行なう場合は、gppbind命令を使用してください。
 	</p>
 	<pre>
-		gppbind objid,mass,friction		ノードに標準的な物理特性を設定
+		gppbind objid,mass,friction,option	ノードに標準的な物理特性を設定
+
+			objid,mass,friction,option
+			objid(0)      : オブジェクトID
+			mass(1)       : 重さ
+			friction(0.5) : 摩擦係数
+			option(0)     : 設定オプション
 	</pre>
 	<p>
 	最初に、gppbind命令により基本的な物理設定を行なってください。
-	パラメーターmassは、物体の重さ。frictionは摩擦係数です。値を省略した場合は、デフォルト値が使用されます。
+	massパラメーターは物体の重さ。frictionパラメーターは摩擦係数です。値を省略した場合は、デフォルト値が使用されます。
 	重さ(mass)を0にすることで静的剛体(衝突はするが、動かない)として設定されます。
-	それ以外の場合は、物理法則に従って床のある場所まで落下します。
-<br><br>
-	物理挙動を設定する場合は、必ず床(地面)となる部分を作成しておいてください。
-	gpfloor命令によって生成された床に標準的な物理特性を設定することで、固定された床面を
-	生成することができます。床が存在しなかった場合、物体は永遠に落下を続けることになります。
-<br><br>
-	物理挙動で使用される形状は、基本的にもとの形状と同じになりますが、gpbモデルノードの場合はモデル全体を
-	包み込むバウンディング球が使用されます。
-<br><br>
-	物理設定を行なったノードオブジェクトは、それ以降自立して動作するようになり、
-	setposなどの座標変更は無効となります。
-	物体に力を加えたい場合は、gppapply命令を使用してください。
+	それ以外の場合は、物理法則に従って床のある場所まで落下します。<br><br>
+	<b>※物理挙動を設定する場合は、必ず床(地面)となる部分を作成しておいてください。
+	gpfloor命令によって生成された床に標準的な物理特性を設定することで、固定された床面を生成することができます。
+	床が存在しなかった場合、物体は永遠に落下を続けることになります。</b><br><br>
+	物理設定を行なったノードオブジェクトは、それ以降自立して動作するようになり、setposなどの座標変更は無効となります。<br><br>
+optionパラメーターにより設定時のオプションを付加します。以下のマクロを指定することができます。
 	</p>
 	<pre>
-		gppapply objid,action,x,y,z		ノードに物理的な力を適用する
+	  opt値               |  内容
+	--------------------------------------------------------------
+	  GPPBIND_NOSCALE        コリジョンにノードのスケールを反映させない
+	  GPPBIND_MESH           コリジョンとしてノードのモデルを反映させる
 	</pre>
 	<p>
-	gppapply命令は、ノードに対して(x,y,z)で指定したベクトルの物理的な力を適用します。
-	パラメーターactionで設定できるタイプは、以下の通りです。
-	</p>
-	<pre>
-	        マクロ名                     内容
-	    ----------------------------------------------------------------------------
-		GPPAPPLY_FORCE               移動しようとする力を加算する
-		GPPAPPLY_IMPULSE             瞬間的な衝撃を与える
-		GPPAPPLY_TORQUE              トルク(ねじる)力を与える
-		GPPAPPLY_TORQUE_IMPULSE      トルク+衝撃を与える
-	</pre>
-	<p>
+	ノードオブジェクトに物理設定を行なうと、接触判定を行う情報(コリジョン)が作成されます。<br>
+	箱ノード、床ノード、板ノードはそれぞれの形状をコリジョンとして扱います。optionに、GPPBIND_NOSCALEを指定した場合は、スケールが反映されていないもともとの形状がコリジョンとなります。<br>
+	3Dモデルノードは、標準ではモデル全体を覆うスフィア(球体)をコリジョンとして作成します。ただし、optionにGPPBIND_MESHを指定した場合は、モデルの形状そのものをコリジョンとして扱います。ただし、複雑なモデル形状をコリジョンにした場合、接触判定にかかる負荷が増大します。<br>
+	コリジョンは、モデルの形状とは独立した情報となります。コリジョンが作成された後は、ノードのスケール値は反映されませんので注意してください。
+<br><br>
 	より詳細な物理設定を行なう場合は、gppset命令を使用してください。
 	</p>
 	<pre>
@@ -1058,6 +1054,25 @@
 		GPPSET_ANGULAR_VELOCITY           X,Y,Z=回転ベロシティー
 		GPPSET_LINEAR_VELOCITY            X,Y,Z=リニアベロシティー
 	</pre>
+	<p>
+	物体に力を加えたい場合は、gppapply命令を使用してください。
+	</p>
+	<pre>
+		gppapply objid,action,x,y,z		ノードに物理的な力を適用する
+	</pre>
+	<p>
+	gppapply命令は、ノードに対して(x,y,z)で指定したベクトルの物理的な力を適用します。
+	パラメーターactionで設定できるタイプは、以下の通りです。
+	</p>
+	<pre>
+	        マクロ名                     内容
+	    ----------------------------------------------------------------------------
+		GPPAPPLY_FORCE               移動しようとする力を加算する
+		GPPAPPLY_IMPULSE             瞬間的な衝撃を与える
+		GPPAPPLY_TORQUE              トルク(ねじる)力を与える
+		GPPAPPLY_TORQUE_IMPULSE      トルク+衝撃を与える
+	</pre>
+	<p>
 
 
 	<h2 id="MATERIAL">マテリアルの設定</h2>
@@ -1089,6 +1104,12 @@
 	gpcolormat命令は、単色のカラーマテリアルを生成します。
 	</p>
 	<pre>
+		gpcolormat var,color,opt
+
+		var      : 生成されたマテリアルIDが代入される変数名
+		color(0) : マテリアルカラー(24bitRGB値)
+		opt(0)   : マテリアルオプション値
+
 		例:
 		gpcolormat mat_id,0xff00ff,GPOBJ_MATOPT_NOLIGHT
 		gpbox id_model, 1, , mat_id
@@ -1111,18 +1132,34 @@
 		GPOBJ_MATOPT_NOZTEST    Zテストを無効にする
 		GPOBJ_MATOPT_NOZWRITE   Zバッファ書き込みを無効にする
 		GPOBJ_MATOPT_BLENDADD   プレンドモードを加算に設定する
+		GPOBJ_MATOPT_SPECULAR   光源計算時にスペキュラーを適用する
 	</pre>
 	<p>
 	gptexmat命令は、テクスチャ(画像)を持ったマテリアルを生成します。
 	</p>
 	<pre>
+		gptexmat var,"file",opt
+
+		var     : 生成されたマテリアルIDが代入される変数名
+		"file"  : 読み込まれるテクスチャファイル名
+		opt(0)  : マテリアルオプション値
+
 		例:
 		gptexmat id_texmat, "res/qbox.png"	; テクスチャマテリアル作成
 		gpbox id_model, 1, , id_texmat		; 箱ノードを追加
 	</pre>
 	<p>
-	上の例では、resフォルダ内のqbox.pngをテクスチャとして持ったマテリアルを生成します。
-<br><br>
+	上の例では、resフォルダ内のqbox.pngをテクスチャとして持ったマテリアルを生成します。<br>
+	テクスチャマテリアルでは、gpcolormat命令のマテリアルオプションに加えて、以下のオプションを指定することができます。
+	</p>
+	<pre>
+	        マクロ名                内容
+	    ----------------------------------------------------------------------------
+		GPOBJ_MATOPT_MIRROR     反転した画像として表示する
+		GPOBJ_MATOPT_CUBEMAP    キューブマップとして設定する
+		GPOBJ_MATOPT_NODISCARD  αチャンネルによるピクセル破棄を無効にする
+	</pre>
+	<p>
 	gpusermat命令は、カスタムマテリアルを生成するもので、任意のシェーダーを使って
 	描画のすべてをコントロールすることができるようになります。
 	これは、シェーダーについての知識がある上級者向けの拡張機能ですので、通常は
