[HSP3Dish][hsp3js] htmlテンプレートの選択機能を追加
Former-commit-id: 4371cc507599e677de87b711f73e2d9c24fcc0e6

--- a/package/win32/doclib/hsp3dish_js.htm
+++ b/package/win32/doclib/hsp3dish_js.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2020(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2021(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="タイトル">
 	<h1>hsp3dish.js (WebGL/html5版)<br><br>プログラミングガイド</h1>
 
@@ -118,7 +118,10 @@
 	</p>
 	</ul>
 	<p>
-	設定ができたら、「変換」ボタンを押してください。スクリプトやデータファイルがhsp3dish.js向けに生成されます。<br>
+	設定ができたら、「変換」ボタンを押してください。
+	その際に、上のコンボボックスでhtmlテンプレートの種類を選択することができます。現在は、標準のhtml(白の背景)と、黒い背景のhtmlを選択することができます。
+	<br>
+	変換を行うことで、スクリプトやデータファイルがhsp3dish.js向けに生成されます。<br>
 	生成されるファイルは、以下の通りです。
 	</p>
 	<ul>
