--- a/package/win32/hsp3js/template2.html
+++ b/package/win32/hsp3js/template2.html
@@ -8,6 +8,7 @@
       body {
         font-family: arial;
         margin: 0;
+        background-color: black;
         padding: none;
       }
 
@@ -36,10 +37,10 @@
         -o-animation: rotation .8s linear infinite;
         animation: rotation 0.8s linear infinite;
 
-        border-left: 5px solid rgb(235, 235, 235);
-        border-right: 5px solid rgb(235, 235, 235);
-        border-bottom: 5px solid rgb(235, 235, 235);
-        border-top: 5px solid rgb(120, 120, 120);
+        border-left: 5px solid rgb(0, 0, 0);
+        border-right: 5px solid rgb(0, 0, 0);
+        border-bottom: 5px solid rgb(0, 0, 0);
+        border-top: 5px solid rgb(0, 0, 0);
         
         border-radius: 100%;
         background-color: rgb(189, 215, 46);
@@ -86,12 +87,12 @@
 
       #output {
         width: 100%;
-        height: 200px;
+        height: 64px;
         margin: 0 auto;
         margin-top: 10px;
         display: block;
         background-color: black;
-        color: white;
+        color: rgb(120, 120, 120);
         font-family: 'Lucida Console', Monaco, monospace;
         outline: none;
       }
@@ -394,6 +395,6 @@ $$$requestonload$$$
 
     </script>
     <script async type="text/javascript" src="hsp3dish.js"></script>
-  <p><font size="2" color="#404040">powered by <a href="https://hsp.tv/make/hsp3dish.html" target="_blank">hsp3dish.js</a> / OpenHSP</font></p>
+  <p><font size="2" color="#c0c0c0">powered by <a href="https://hsp.tv/make/hsp3dish.html" target="_blank">hsp3dish.js</a> / OpenHSP</font></p>
   </body>
 </html>
