ドキュメントの修正
Former-commit-id: da5d370df738f6292f831c3ab7290111b6ca455e

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -382,10 +382,10 @@
 			<dt>コンパクト版HSPランタイム(hsp3c)</dt>
 			<dd>
 				<p>
-					標準のHSP3から、COM関連機能を削除し、ランタイムにかかるファイルサイズを30%以上削減しています。
-					コンパクト版HSPランタイムは、Windowsの互換性を重視して古いコンパイラで作成されており、Windows9xを始めとする幅広いWindows OSをサポートします。
+					コンパクト版HSPランタイムは、Windowsの互換性を重視して古いコンパイラで作成されており、Windows98以降の幅広いWindows OSをサポートします。
 					過去のOSやスクリプトを使用する場合にご使用ください。
 					最新のOSを使用する場合は、コンパクト版は推奨されません。標準HSP3など他のランタイムの方が効率よく実行されます。
+					コンパクト版HSPランタイムはHSP3標準ランタイムと同等の機能を持っており、制約や制限などはありません。
 				</p>
 			</dd>
 			<dt>HSP3UTFランタイム(hsp3utf)</dt>
