--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -35,6 +35,7 @@
 			<li><a href="#HSPSW">hspswプラグインについて</a></li>
 			<li><a href="#HSPINET">hspinetプラグインの更新について</a></li>
 			<li><a href="#HSP64">64bit(x64)版ランタイムについて</a></li>
+			<li><a href="#HSP3C">コンパクト(hsp3c)版ランタイムについて</a></li>
 			<li><a href="#HSPTVSOZAI">HSPTVフォルダ素材について</a></li>
 			<li><a href="#HSPENG">英語版インターフェースの対応について</a></li>
 			<li><a href="#HSP3DISH">HSP3Dishのスクリーンサイズ変更について</a></li>
@@ -443,6 +444,28 @@
 		</pre><p>
 		動作の仕様は、HSP3UTF(UTF-8)版ランタイムと同様になっています。
 		64bit(x64)ランタイムは、64bit版のWindows上(Windows 7以降)でのみ動作します。
+		</p>
+
+
+	<h2 id="HSP3C">コンパクト(hsp3c)版ランタイムについて</h2>
+		<p>
+		HSP3.51までのコンパクト版ランタイム(hsp3c)は、標準のHSP3から
+		一部機能を削除したものでしたが、HSP3.6から機能としては変わらないものになっています。
+		標準ランタイムとの大きな違いは、古いコンパイラによるシングルスレッドライブラリを
+		使用してビルドされており、ファイルサイズや使用メモリが削減されている反面で
+		新しいOSやCPU環境で実行の効率が落ちる可能性があります。<br>
+		標準ランタイムは、最新のコンパイラ環境でビルドされており、多くの環境で効率的に
+		動作するよう最適化されています。<br>
+		特に理由がない場合は、標準ランタイムを使用することを推奨しています。
+		ただし、標準ランタイムでは、Windows XP以降の動作をサポートするのに対して、
+		コンパクト版ランタイムは、Windows 98以降の動作をサポートしています。<br>
+		<br>
+		コンパクト版ランタイムを使用する場合は、スクリプトの先頭に以下の行を指定してください。
+		</p><pre>
+	#include "hsp3c.as"
+		</pre><p>
+		また、これに伴って、HSP3.51まで用意されていたマルチスレッド版ランタイム(hsp3mt)の同梱を終了しました。
+		hsp3mtを使用していたユーザーは、引き続き標準のHSP3ランタイムをご使用ください。
 		</p>
 
 
