ドキュメントの更新
Former-commit-id: d3c6177d2c65171090fb38972553aa016db4e910

--- a/package/win32/doclib/sprite.html
+++ b/package/win32/doclib/sprite.html
@@ -289,7 +289,7 @@
 	変更することも可能です。
 	<br><br>
 	p5はユーザーが自由に使用できるoption値を設定します。
-	(option値の詳細については、スプライトパラメーターの項目を参照してください)
+	(option値の詳細については、<a href="#INFO_SPRITE">スプライトパラメーター</a>の項目を参照してください)
 	<br><br>
 	p6でスプライトの優先順位を指定します。優先順位は値が小さいほど手前に
 	表示されるようになり、同一値の場合はスプライトの小さい方が優先されます。
@@ -337,7 +337,7 @@
 	es_chr命令は、キャラクタNo.を変更します。
 	es_type命令は、 スプライト識別用の値(type値)を指定します。
 	es_flag命令は、 スプライトフラグ値(flag値)を指定します。
-	(flag値、type値の詳細については、スプライトパラメーターの項目を参照してください)
+	(flag値、type値の詳細については、<a href="#INFO_SPRITE">スプライトパラメーター</a>の項目を参照してください)
 	</p>
 
 	<h2 id="MOVE_SPRITE">スプライトの移動</h2>
@@ -546,6 +546,10 @@ es_pos命令が設定する座標値は、内部では16bit固定小数になっ
 	  bit16 : $10000 非表示SWITCH [ESSPFLAG_NODISP]
 	</pre>
 
+	<pre>
+	es_type p1,p2
+		p1=スプライトNo.
+		p2=type値</pre>
 	<p>
 	スプライトのtype値は、ゲームなどで物体の識別をする時に有効に使うことが
 	できます。type値は、es_type命令で設定することができます。<br>
@@ -571,6 +575,11 @@ es_pos命令が設定する座標値は、内部では16bit固定小数になっ
 	また、自分のミサイルが敵に衝突しているかを判定する場合には、まず
 	es_find命令でtype8のスプライトだけを検索して、 その1つ1つが、敵(type2)
 	と衝突しているかを判定すればいいわけです。
+	</p>
+	<p>
+	スプライトのオプション値(ESI_OPTION)は、ユーザーが自由に設定できる値です。
+	スプライト固有の情報や数値を保存するために使用することができます。
+	システム側がオプション値を参照した動作を行うことはありません。
 	</p>
 
 
