標準スプライトのes_fade命令にαチャンネルのフェード機能を追加 標準スプライトのes_draw命令がstatに値を返すように修正
Former-commit-id: fa22692b856d811381cb0db6a65b933d1c6ae56f

--- a/package/win32/doclib/sprite.html
+++ b/package/win32/doclib/sprite.html
@@ -453,7 +453,11 @@
 	16     ESI_FADEPRM     フェード用パラメーター
 	17     ESI_ZOOMX       X表示倍率
 	18     ESI_ZOOMY       Y表示倍率
-	19     ESI_ROTZ        回転角度</pre>
+	19     ESI_ROTZ        回転角度
+	20     ESI_SPLINK      リンクするスプライトNo.(未使用)
+	21     ESI_TIMER       タイマー値
+	22     ESI_TIMERBASE   タイマー値(マスター)
+	</pre>
 	<p>
 	すべての情報は32bitの整数で保存されています。
 	設定された情報を読み出したり、設定するために以下のような命令が用意されています。
@@ -832,6 +836,31 @@ es_pos命令が設定する座標値は、内部では16bit固定小数になっ
 	gmodeで設定するモード値を256倍(16進数で$100)したものに、半透明レート(αチャンネル値)を加算したものがEP値になります。
 	デフォルト値は、$3ff(αチャンネル=255、gmode3相当)が設定されています。<br>
 	p3パラメーターにより、スプライト描画時に特定のライト色を乗算することができます。このパラメーターは現在未実装となっています。
+	</p>
+	<pre>
+		es_fade p1,p2,p3		スプライト点滅・フェード設定
+			p1(0)=スプライトNo.
+			p2(1)=フェードモード
+			p3(30)=タイマー初期値</pre>
+	<p>
+	スプライトごとに点滅やフェードなどの特殊な動作を設定することができます。
+	p1で指定したスプライトにタイマーを設定して、一定時間だけ点滅やフェードなどを実行します。
+	p2でフェードモードを設定します。省略した場合は、1が選択されます。
+	</p>
+	<pre>
+		 フェードモード  マクロ              内容
+		------------------------------------------------------------------------------------
+		    1            ESSPF_TIMEWIPE      タイマー時間が経過したら消滅
+		    2            ESSPF_BLINK         点滅させる、タイマー時間が経過したら終了
+		    3            ESSPF_BLINKWIPE     点滅させる、タイマー時間が経過したら消滅
+		    4            ESSPF_FADEOUT       タイマー時間でフェードアウトを行う
+		    5            ESSPF_FADEOUTWIPE   タイマー時間でフェードアウトを行う、その後消滅
+		    6            ESSPF_FADEIN        タイマー時間でフェードインを行う
+		    7            ESSPF_FADEINWIPE    タイマー時間でフェードインを行う、その後消滅
+	</pre>
+	<p>
+	p3でタイマー時間(フレーム数)を指定します。このフレーム数が経過すると、点滅やフェード動作を終了します。
+	p3に-1を設定すると、カウントは無限になります。
 	</p>
 
 
