[HSP3Dish] 標準スプライトで自動回転・ズームを行うためのes_arot命令を追加
Former-commit-id: 37204f24a86f6a287bf6f6df0a76a2ca42e3dfc5

--- a/package/win32/doclib/sprite.html
+++ b/package/win32/doclib/sprite.html
@@ -28,6 +28,7 @@
 		<li><a href="#SPRITE_INIT">初期化とキャラクタパターンの登録</a></li>
 		<li><a href="#ADD_SPRITE">スプライトの登録</a></li>
 		<li><a href="#MOVE_SPRITE">スプライトの移動</a></li>
+		<li><a href="#BORDER_SPRITE">スプライト有効エリア</a></li>
 		<li><a href="#INFO_SPRITE">スプライトパラメーター</a></li>
 		<li><a href="#PRIORITY_SPRITE">スプライトの表示優先順位</a></li>
 		<li><a href="#MANAGE_SPRITE">スプライト管理命令</a></li>
@@ -401,16 +402,18 @@
 	するようにしたい時などに役立ちます。
 	p4で移動スピードを%で指定します。 p3を省略するか、100(%)を指定した場合
 	には、指定した方向に1フレームにつき1ドットの距離を移動します。
-	<br><br>
-	スプライトを移動させる上で知っておくと便利な機能の1つとして、 スプライト
-	自動削除機能があります。これは、画面外の座標が設定されたり、スプライトの
-	自動移動で画面外へ出てしまったものを自動的に削除する機能です。<br>
-	このために、スプライト有効エリアというのが設定されています。
-	スプライト有効エリアの範囲内にあるスプライトのみが有効となり、
-	その範囲から出たスプライトは自動的に削除されるというしくみになっています。<br>
+	</p>
+
+
+	<h2 id="BORDER_SPRITE">スプライト有効エリア</h2>
+
+	<p>
+	スプライトが指定された有効エリアからはみ出ると、自動的に削除されます。
+	画面外の座標が設定されたり、スプライトの自動移動で画面外へ出てしまったものが残らないようにする機能です。<br>
+	このために、スプライト有効エリアというのがあらかじめ設定されています。
+	スプライト有効エリアの範囲内にあるスプライトのみが有効となり、その範囲から出たスプライトは自動的に削除されるというしくみになっています。<br>
 	通常、スプライト有効エリアは、es_ini命令を実行したウインドウの表示範囲の外128ドット以内になっています。
-	たとえば、(640×480)ドットの場合、スプライトの取れる座標の範囲として、(-128,-128)から
-	(768,608)までということになります。
+	たとえば、(640×480)ドットの場合、スプライトの取れる座標の範囲として、(-128,-128)から(768,608)までということになります。
 	このスプライト有効エリアを変更する命令がes_area命令です。
 	</p>
 	<pre>
@@ -421,8 +424,21 @@
 		p4=有効エリアの右下Y座標</pre>
 	<p>
 	スプライトの有効エリアを設定します。
-	スプライト座標が(p1,p2)-(p3,p4)の範囲内にないものは、 自動的に削除されます。
+	スプライト座標が(p1,p2)-(p3,p4)の範囲内にないものは、 自動的に削除されます。<br>
+	スプライトの自動削除を意図的に無効にしたい場合は、フラグの設定により無効化することができます。
 	</p>
+	<pre>
+		es_flag スプライトNo., ESSPFLAG_STATIC+ESSPFLAG_NOWIPE
+	</pre>
+	<p>
+	この場合は、画面外にスプライトが残らないように注意してください。
+	また、ESSPFLAG_XBOUNCE及びESSPFLAG_YBOUNCEのフラグを設定することで、有効エリア外に移動しようとした場合に移動方向を反転させることができます。
+	ESSPFLAG_XBOUNCEの場合はX方向が、ESSPFLAG_YBOUNCEの場合はY方向が反転されます。以下のように両方を指定することも可能です。
+	</p>
+	<pre>
+	es_flag スプライトNo. , ESSPFLAG_STATIC+ESSPFLAG_XBOUNCE+ESSPFLAG_YBOUNCE
+	</pre>
+
 
 	<h2 id="INFO_SPRITE">スプライトパラメーター</h2>
 
@@ -457,6 +473,9 @@
 	20     ESI_SPLINK      リンクするスプライトNo.(未使用)
 	21     ESI_TIMER       タイマー値
 	22     ESI_TIMERBASE   タイマー値(マスター)
+	23     ESI_PROTZ       回転角度(加算値)
+	24     ESI_PZOOMX      X表示倍率(加算値)
+	25     ESI_PZOOMY      Y表示倍率(加算値)
 	</pre>
 	<p>
 	すべての情報は32bitの整数で保存されています。
@@ -537,8 +556,7 @@ es_pos命令が設定する座標値は、内部では16bit固定小数になっ
 	</p>
 	<pre>
 	  0    :  スプライト未登録
-	  bit 0-6 : 1～127 カウントダウンタイマー
-	  bit 7   : カウントダウン消失SWITCH
+	  bit 0-7 : 1～127 カウントダウンタイマー(HSPDX互換)
 	  bit 8 :  $100 スプライト表示ON [ESSPFLAG_STATIC]
 	  bit 9 :  $200 スプライト移動ON [ESSPFLAG_MOVE]
 	  bit10 :  $400 自由落下移動ON [ESSPFLAG_GRAVITY]
@@ -548,6 +566,12 @@ es_pos命令が設定する座標値は、内部では16bit固定小数になっ
 	  bit14 : $4000 ボーダーYで反転SWITCH [ESSPFLAG_YBOUNCE]
 	  bit15 : $8000 カウントダウンタイマー時点滅SWITCH [ESSPFLAG_BLINK]
 	  bit16 : $10000 非表示SWITCH [ESSPFLAG_NODISP]
+	  bit17 : $20000 カウントダウンタイマー時フェードインSWITCH [ESSPFLAG_FADEIN]
+	  bit18 : $40000 カウントダウンタイマー時フェードアウトSWITCH [ESSPFLAG_FADEOUT]
+	  bit19 : $80000 カウントダウンタイマー終了時消滅SWITCH [ESSPFLAG_TIMERWIPE]
+	  bit20 : $100000 カウントダウンタイマー時消滅SWITCH2 [ESSPFLAG_BLINK2]
+	  bit21 : $200000 カウントダウンタイマー時末尾フェードSWITCH [ESSPFLAG_EFADE]
+	  bit22 : $400000 カウントダウンタイマー時末尾フェードSWITCH2 [ESSPFLAG_EFADE2]
 	</pre>
 
 	<pre>
@@ -853,13 +877,20 @@ es_pos命令が設定する座標値は、内部では16bit固定小数になっ
 		    1            ESSPF_TIMEWIPE      タイマー時間が経過したら消滅
 		    2            ESSPF_BLINK         点滅させる、タイマー時間が経過したら終了
 		    3            ESSPF_BLINKWIPE     点滅させる、タイマー時間が経過したら消滅
-		    4            ESSPF_FADEOUT       タイマー時間でフェードアウトを行う
-		    5            ESSPF_FADEOUTWIPE   タイマー時間でフェードアウトを行う、その後消滅
-		    6            ESSPF_FADEIN        タイマー時間でフェードインを行う
-		    7            ESSPF_FADEINWIPE    タイマー時間でフェードインを行う、その後消滅
+		    4            ESSPF_BLINK2        ゆっくり点滅させる、タイマー時間が経過したら終了
+		    5            ESSPF_BLINKWIPE2    ゆっくり点滅させる、タイマー時間が経過したら消滅
+		    6            ESSPF_FADEOUT       タイマー時間でフェードアウトを行う
+		    7            ESSPF_FADEOUTWIPE   タイマー時間でフェードアウトを行う、その後消滅
+		    8            ESSPF_FADEIN        タイマー時間でフェードインを行う
+		    9            ESSPF_FADEINWIPE    タイマー時間でフェードインを行う、その後消滅
+		   10            ESSPF_EFADE         タイマー時間の最後にフェードアウトを行う
+		   11            ESSPF_EFADEWIPE     タイマー時間の最後にフェードアウトを行う、その後消滅
+		   12            ESSPF_EFADE2        タイマー時間の最後にゆっくりフェードアウトを行う
+		   13            ESSPF_EFADEWIPE2    タイマー時間の最後にゆっくりフェードアウトを行う、その後消滅
 	</pre>
 	<p>
-	p3でタイマー時間(フレーム数)を指定します。このフレーム数が経過すると、点滅やフェード動作を終了します。
+	p3でタイマー時間(フレーム数)を指定します。このフレーム数が経過すると、点滅やフェード動作を終了します。<br>
+	ESSPF_FADEOUT/ESSPF_FADEINは、指定したタイマー時間全体でフェードを行うのに対して、ESSPF_EFADE及びESSPF_EFADEWIPE2は、タイマー時間に関係なく一定の速度でフェードアウトを行います。<br>
 	p3に-1を設定すると、カウントは無限になります。
 	</p>
 
