[HGIMG4] 3Dモデルの階層情報を取得するgpnodeinfo命令を追加 [HSP3Dish] 標準スプライトのes_setparent命令を実装
Former-commit-id: a7c9d5aaa6402f022a8040fe3c69d4600e3fa7cf

--- a/package/win32/doclib/sprite.html
+++ b/package/win32/doclib/sprite.html
@@ -560,7 +560,7 @@ es_pos命令が設定する座標値は、内部では16bit固定小数になっ
 	  bit 8 :  $100 スプライト表示ON [ESSPFLAG_STATIC]
 	  bit 9 :  $200 スプライト移動ON [ESSPFLAG_MOVE]
 	  bit10 :  $400 自由落下移動ON [ESSPFLAG_GRAVITY]
-	  bit11 :  $800 BGとリンクして移動(未実装) [ESSPFLAG_BGLINK]
+	  bit11 :  $800 親とリンクして移動 [ESSPFLAG_SPLINK]
 	  bit12 : $1000 ボーダー消去無効ON [ESSPFLAG_NOWIPE]
 	  bit13 : $2000 ボーダーXで反転SWITCH [ESSPFLAG_XBOUNCE]
 	  bit14 : $4000 ボーダーYで反転SWITCH [ESSPFLAG_YBOUNCE]
