--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -139,6 +139,10 @@
 	(何らかの理由でネット接続ができない環境で使用する場合は、一時的にネット接続可能な場所で
 	インストールを行なった後、android開発環境(SDK)フォルダそのものを用意すれば、ビルドには問題ありません。)
 	</p>
+	<p>
+	※Google Playに公開するための新規アプリは、2021年8月からandroid 11(API30)及びAAB(Android App Bundle)形式で登録する必要があります。<br>
+	AAB形式によるビルドは今後早い段階でサポートされる予定ですので、<a href="https://www.onionsoft.net/wp/archives/category/hsp/download" target="_blank">βテスト版の更新</a>をチェックするようにしてください。
+	</p>
 
 	<h2 id="DHNEWPROJ">新規プロジェクトの作成</h2>
 	<p>
@@ -318,7 +322,7 @@
 	<p>
 	sysinfo関数によりOSバージョン及び、デバイス名を取得することが可能になりました。
 	sysinfo(0)で、「android 2.3.3」のような文字列を取得することができます。これにより、ソース中で現在動作しているOSやバージョンを判別可能です。<br>
-	また、sysinfo(2)で、デバイス名を取得することができます。現在、sysinfo関数の他の項目はサポートされていません。
+	また、sysinfo(2)で、デバイス名を取得することができます。
 	</p>
 
 	<h2 id="EXECTASK">タスク(アクティビティ)呼び出し</h2>
@@ -605,6 +609,35 @@
 	は、バイブ(振動)動作を行なうようデバイスに指示を出します。<br>
 	パラメーターの数値を変えることにより、振動の長さ(ミリ秒単位)を変えることができます。
 	</p>
+
+	<p>
+	また、devinfo命令によりシステム情報を取得することが可能です。<br>
+	</p>
+	<pre>
+		devinfo 変数名, "情報名"
+	</pre>
+	<p>
+	上のような書式で、デバイスコントロールを行ないます。
+	Androidデバイス上では、文字列として指定するコントロールコマンドは、以下を認識します。
+	(コントロールコマンドの文字列は、大文字小文字も含めて完全に一致する必要があります。)<br>
+	認識しないコントロールコマンドを記述した場合もエラーは発生しませんので注意してください。
+	</p>
+	<pre>
+	情報名      内容
+	-------------------------------------------
+	name        端末の種別名( 端末名はsysinfo(2)で取得できます )
+	locale      ロケール(地域)の情報
+	</pre>
+	<p>
+	たとえば、
+	</p>
+	<pre>
+		devinfo a,"locale"
+	</pre>
+	<p>
+	は、変数aにロリールの情報を代入します。<br>
+	</p>
+
 
 
 	<h2 id="ADMOB">AdMobによる広告配信</h2>
