ドキュメントの修正 実行ファイル作成時に付加されるバージョン情報の区切り文字をドットに修正
Former-commit-id: b8534a597d66f4bbfa0144b104aec2381920e871

--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -61,7 +61,8 @@
 			mes,print命令で影文字、縁取りなどの修飾ができるオプションが追加されています。
 			配置オブジェクトの配色を指定するためのobjcolor命令、ユーザー定義による配置オブジェクトを定義するためのobjlayer命令が追加されています。
 			他にも<a href="hspprog.htm#CALLBACK">コールバックルーチン</a>の厳格化や、24bitカラーコードを指定するためのrgbcolor命令など多くの新機能を搭載しています。<br>
-			また、Unicode文字を標準で使用する新しいランタイム、hsp3utf、hsp3_64などもアップデートされています。
+			また、stick命令で取得されるキーの追加、ジョイスティック入力モジュールなど細かいアップデートも行われています。<br>
+			Unicode文字を標準で使用する新しいランタイム、hsp3utf、hsp3_64などもアップデートされており、
 			いままでの機能はそのままに、ゲームだけでなく、ツール製作や手軽なプロトタイピングに役立つ機能を拡充しています。
 			</p>
 			</dd>
@@ -84,9 +85,9 @@
 			<p>
 			Windows/iOS/android/Linux/html5(WebGL)上での実行をサポートする<a href="hsp3dish_prog.htm">HSP3Dish</a>の各種機能を拡充しています。<br>
 			文字列の描画を大きく見直し、すべてのプラットフォームで日本語を含む文字列の表示、半透明合成に対応しています。
-			また、新しい配置オブジェクトとしてチェックボックス、入力ボックスをサポートしています。
+			また、新しい配置オブジェクトとしてチェックボックス、入力ボックスをサポートしています。(一部のプラットフォームのみ)
 			Windows/Linuxプラットフォームでは、screen、bgscr命令によるウインドウサイズの変更、フルスクリーン表示に対応しています。
-			他にも、最新の端末に対応できる新しいSDKへの対応や、各種センサー情報の取得、ネットワークアクセス、スプライト描画などの機能も拡充しています。
+			他にも、最新の端末に対応できる新しいSDKへの対応や、各種センサー情報の取得、ネットワークアクセス、HSPDX互換のスプライト描画機能も拡充しています。
 			webブラウザで動作するhsp3jsは、新たにWebAssembly形式の出力が可能です。HGIMG4描画の速度も大幅に向上し実用性がアップしました。
 			幅広いデバイスへの変換をサポートするHSP3Dish Helperツールも、より便利で手軽に利用できようになりました。
 			</p>
@@ -99,8 +100,8 @@
 			<p>
 			ハイレベルな3D表現を可能にする<a href="hgimg4.html">HGIMG4プラグイン</a>を大幅に更新しています。
 			システムの安定向上や高速化のほか、ライティング機能、ポストエフェクトに関する機能を充実させています。また、FBXモデル変換時の制約、複製時の制約など細かい使い勝手が向上しています。<br>
-			新しいHGIMG4ツールでは、fbxファイルを変換した後の3Dデータをより詳細に確認、編集できるようになりました。
-			マテリアル(.material)ファイルをGUIにより詳細に確認することが可能になっています。
+			新しいHGIMG4ツールでは、fbxファイルを変換した後の3Dデータをより詳細に確認、編集できるようになりました。マテリアル(.material)ファイルをGUIにより詳細に確認することが可能になっています。<br>
+			新規の命令により、自由な形状の生成、物理衝突情報の取得、ノード階層情報の取得などが可能になります。ライティング機能ではラストの種類、個数が拡充され、より高度な表現を可能にしています。ポストエフェクトについても、標準のモジュールによるサポートを追加しました。
 			</p>
 			</dd>
 
@@ -113,6 +114,7 @@
 			HSP3オフィシャルキャラクター "珠音（たまね）"を始めとして、プロ生ちゃんコラボ素材など
 			ゲームを中心に幅広く活用することができます。
 			新たなサンプルスクリプトも同梱し、オリジナルの作品作りのため、自由に活用することができます。
+			HSPTV素材を使用したWebアプリケーションを公開できるサービス、<a href="https://dev.onionsoft.net/seed/webdish.html" target="_blank">「WebDish」</a>も公開されています。
 			</p>
 			</dd>
 
@@ -226,8 +228,9 @@
 		ユニークな仕組みも導入され、元のHSPDXプラグインよりも利便性向上しています。<br>
 		座標も整数で管理されており、2DゲームやUI表示などで扱いやすいものになっています。
 		もちろんイベントリストによる自律移動や3Dとの連携については、従来のプラグインを利用することもできます。<br>
-		標準スプライトは、HSP3Dish、HGIMG4がサポートする全プラットフォームで動作するほか、
-		HSP3標準ランタイムでもサポートすることを予定しています。<br>
+		標準スプライトは、HSP3Dish、HGIMG4がサポートする全プラットフォームで動作します。
+		描画速度は、標準のHSP3ランタイムよりも優れており、ゲームの描画など速度を要求されるシーンでは
+		ベストの選択肢となるはずです。<br>
 		標準スプライトの詳細は、<a href="sprite.html">「標準スプライトプログラミングガイド」</a>を参照してください。
 		</p>
 
@@ -481,6 +484,8 @@
 		</p><pre>
 		HSP3.6 WebDish素材データ
 		<a href="https://dev.onionsoft.net/seed/webdish_res.html" target="_blank">https://dev.onionsoft.net/seed/webdish_res.html</a>
+		WebDishサービス
+		<a href="https://dev.onionsoft.net/seed/webdish.html" target="_blank">https://dev.onionsoft.net/seed/webdish.html</a>
 		</pre><p>
 
 	<h2 id="HSPENG">英語版インターフェースの対応について</h2>
@@ -603,8 +608,8 @@
 		<p>
 		HSP3DishのiOS,android版は、それぞれの新しいSDKに対応しています。
 		</p><pre>
-	iOS版	  : XCode9以降用 iOS13,64bit対応
-	android版 : Android SDK 7.0 (API 24),64bit対応、
+	iOS版	  : XCode10以降用 iOS14,64bit対応
+	android版 : Android SDK 10 (API 29),64bit対応、
 	            SDKr25、NDK r12以降、AdMob(Google Firebase)対応
 		</pre><p>
 		iOS、android版ともに64bitバイナリの出力に対応しています。
@@ -685,6 +690,7 @@
 
 		オフスクリーンに描画した内容をテクスチャとして再利用することで、詳細な鏡面反射(映り込み)、
 		影の生成などに応用することができます。<br>
+		この機能を使ったポストエフェクトを手軽に利用できるmod_posteffectモジュールが標準で用意されています。これにより、色の調整やぼかし、グロー、輪郭抽出などの効果を画面全体に適用することができます。<br>
 		(※オフスクリーンテクスチャバッファはWindows,Linux,androidプラットフォームのみサポートされています)
 		<br>
 		<br>
@@ -751,6 +757,27 @@
 		</pre><p>
 		上のように、システムリクエストでSYSREQ_USEGPBFONTに1を設定することで従来のフォント表示に切り替えることができます。(「res/font.gpb」ファイルを用意する必要があります)<br>
 		システムリクエストによるフォント描画の切り替えは、任意のタイミングで行うことが可能です。
+		<br>
+		<br>
+		<LI>ライティング機能の拡充
+		<br><br>
+		平行光源(ディレクショナルライト)、点光源(ポイントライト)、スポットライトの3種をそれぞれ10個まで配置することができます。それぞれの影響を受けるオブジェクトを任意に設定できるほか、ライトのパラメーターもコントロールが可能です。<br>
+		詳しくは、gplight、gpuselightなどの命令を参照してください。
+		sample/hgimg4フォルダにライト設定のサンプルとして、light_test1.hsp～light_test5.hspが含まれていますので併せて動作をご確認ください。
+		<br>
+		<br>
+		<LI>各種情報の取得
+		<br><br>
+		物理挙動を設定したオブジェクトが衝突した際の座標や方向など詳しい情報を取得するための、gppcontact、gppinfo命令が用意されました。
+		また、任意のベクトル(空間上の2点)に接触するオブジェクトを調べるためのgppraytest命令も追加されています。<br>
+		階層を持つ複雑な3Dモデルの各階層を辿ることのできるgpnodeinfo命令が新しく追加されました。
+		任意のノード階層にある座標や回転情報を取得したり、すべての階層情報を取り出すことができるようになっています。
+		<br>
+		<br>
+		<LI>自由な形状の生成
+		<br><br>
+		スクリプトからポリゴンの面情報を作成してオブジェクトとして扱う機能が追加されています。
+		gpmeshclear、gpmeshadd、gpmeshpolygon命令を組み合わせることにより、3角形または4角形の面を構成し、それぞれのX,Y,Z座標、法線ベクトル、テクスチャUV座標などを設定することができます。
 		<br>
 		<br>
 		<LI>2D描画シェーダーの内蔵
