HSP3デモンストレーションの更新
Former-commit-id: f5a14dc4f17f0c15bb0d7b401caad96c4db9aaea

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -494,7 +494,7 @@
 			HSP3ユーティリティマクロ(hsp3util.as)は、HSPWiKi及び、ぷまさんが作成したものを同梱させて頂きました。
 		</p>
 		<p>
-			arueさんにHGIMG3、及びドキュメントについて助言を頂きました。また、HSP3スクリプト用アイコン(hspscr_icon)を作成して頂きました。
+			arueさんにHGIMG3/4、及びドキュメントについて助言を頂きました。また、HSP3スクリプト用アイコン(hspscr_icon)、サンプルデモの音量調整をして頂きました。
 		</p>
 		<p>
 			デバッグウインドウのコールスタック表示などは、mjhd_otsukaさんが開発したものを使用させて頂きました。
