HSP3Dish helper,GPB converterの更新
Former-commit-id: 4be138dde55ff358d5908f69dd1ea10b83c32afd

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -4659,16 +4659,7 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 					暗号化を行ないます。標準的な方法です。
 				</p>
 			</dd>
-			<dt>DPMファイルに暗号化してパック(1)</dt>
-			<dd>
-				<p>
-					スクリプトエディタのメニューから、「DPMファイル作成」機能を使用して作成します。
-					作成されたDPMファイルは、暗号化されている場合にはエディタ等でデータの確認が
-					難しくなりますが、HSPを使って用意に中身を取り出すことが可能です。
-					実行ファイルにパックする場合よりも、セキュリティは低くなります。
-				</p>
-			</dd>
-			<dt>DPMファイルに暗号化してパック(2)</dt>
+			<dt>DPMファイルに暗号化してパック</dt>
 			<dd>
 				<p>
 					HSP3.0から追加された、個別の暗号キーを設定した状態でDPMファイルを作成します。
