英語版マニュアルの修正
Former-commit-id: 8defaf670892f2d4922ec2ba2d1a38dd184336b9

--- a/package/win32_en/index.htm
+++ b/package/win32_en/index.htm
@@ -15,8 +15,11 @@
 	<div id="CONTAINER">
 <!-Header->
 		<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2021(c)</p>
-		<img src="doclib/hsp3ttl.jpg" width="640" height="200" alt="title">
-<h1> HSP Manual Comprehensive Index </h1>
+		<p><img src="doclib/hsp3ttl.jpg" width="640" height="200" alt="title"></p>
+		<p>
+		 <a href="../v36/index.htm">[日本語マニュアル]</a>
+		</p>
+<h1> HSP Manual Index </h1>
 		
 <!-Body->
 		<ul>
@@ -30,13 +33,13 @@
 <li> <a href="doclib/update36.htm"> HSP3.6 New Feature Highlights (update36.htm) </a> </li>
 			</ul>
 <li> <a href="doclib/hspprog.htm"> Programming Manual / Basic Specification Guide (hspprog.htm) </a> </li>
-<li> <a href="doclib/beginner/start.htm"> Introduction to HSP for beginners (beginner / start.htm) </a> </li>
+<li> <a href="doclib/beginner/START.HTM"> Introduction to HSP for beginners (beginner / start.htm) </a> </li>
 <li> <a href="doclib/faq.htm"> Frequently Asked Questions (faq.htm) </a> </li>
 <li> <a href="doclib/error.htm"> Error message list (error.htm) </a> </li>
 <li> <a href="doclib/plugin.htm"> List of extended plug-in modules (plugin.htm) </a> </li>
 <li> <a href="doclib/hspat.htm"> HSP Assistant Manual (hspat.htm) </a> </li>
 <li> <a href="doclib/peas.htm"> peas editor manual (peas.htm) </a> </li>
-less
+<li><a href="doclib/HSP Docs Library/hdl_usage.html">HDL(HSP Document Library)（hdl_usage.html）</a></li>
 <li> <a href="doclib/hsptv.htm"> HSPTV Browser Manual (hsptv.htm) </a> </li>
 <li> <a href="doclib/hsptv_res.htm"> HSPTV folder material list (hsptv_res.htm) </a> </li>
 <li> <a href="doclib/pronama.htm"> Professional student collaboration material (pronama.htm) </a> </li>
@@ -94,7 +97,7 @@ less
 <li> <a href="doclib/aht.txt"> AHT (Additional HSP Template & amp; Tools) Manual (for intermediate and advanced users) (aht.txt) </a> </li>
 <li> <a href="doclib/hsptv_api.txt"> HSPTV compatible software creation manual (for intermediate and advanced users) (hsptv_api.txt) </a> </li>
 <li> <a href="doclib/hsptvapp.txt"> HSPTV! Ranking compatible software creation manual (for intermediate and advanced users) (hsptvapp.txt) </a> </li>
-<li> <a href="doclib/HSP Docs Library / HS_BIBLE.txt"> Standard specifications for hs files for HSP HELP Browser (HS_BIBLE.txt) </a> </li>
+<li> <a href="doclib/HSP Docs Library/HS_BIBLE.txt"> Standard specifications for hs files for HSP HELP Browser (HS_BIBLE.txt) </a> </li>
 <li> <a href="hspsdk/readme.txt"> HSP SDK (HSP Development Kit) Manual (for advanced users) (readme.txt) </a> </li>
 <li> <a href="hspsdk/hspdll.txt"> HSP Plugin Development Manual (for advanced users) (hspdll.txt) </a> </li>
 <li> <a href="doclib/hsp3cnv.txt"> HSP3 Source Converter Manual (for advanced users) (hsp3cnv.txt) </a> </li>
