[HSP3Dish] Dish P Helper 及び、Android/iOSアイコン作成ツールをパッケージに同梱
Former-commit-id: aab05d91b1a1d104b36545d6f6706f47444cd1e0

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -510,6 +510,9 @@
 			<a href="https://github.com/StreamletStudio/ZLibWrap" target="_blank">ZLibWrap.dll</a>は、StreamletStudioが作成し公開されているものを同梱させていただきました。
 		</p>
 		<p>
+			Dish P Helper 及び、Android/iOSアイコン作成ツール は、しまくろねこさんが作成し公開されているものを同梱させていただきました。
+		</p>
+		<p>
 			HSPTVフォルダ内のフリー素材は、Y-Jinnさん、NAO・Graphics・Lab'さん、他の皆様が製作したものを許可を頂いた上で同梱させていただきました。
 		</p>
 		<p>
@@ -591,10 +594,17 @@
 				<p>
 		<a href="https://lhsp.s206.xrea.com/" target="_blank">http://lhsp.s206.xrea.com/</a>
 				</p>
+			</dd>
 			<dt>inoviaさん</dt>
 			<dd>
 				<p>
 		<a href="https://hsp.moe/" target="_blank">https://hsp.moe/</a>
+				</p>
+			</dd>
+			<dt>しまくろねこ さん</dt>
+			<dd>
+				<p>
+		<a href="https://sites.google.com/site/simakuroneko/" target="_blank">https://sites.google.com/site/simakuroneko/</a>
 				</p>
 		</dl>
 
