[HSP3Dish] boxf命令の塗りつぶし範囲が標準ランタイムと異なる不具合を修正 [HSP3Dish][Windows] デバイスロスト時にアプリが停止する不具合を修正 [HSP3Dish][Windows] celload命令により選択したフォントがリセットされる不具合を修正
Former-commit-id: f76914a8bd84c7546271c9a11abfeed750b83f3b

--- a/package/win32/doclib/hgimg4.html
+++ b/package/win32/doclib/hgimg4.html
@@ -244,8 +244,10 @@
 	gptexmat var,"file",opt				テクスチャマテリアルの生成
 	gpusermat var,"vsh","fsh","defs",color,opt	カスタムマテリアルの生成
 	gpmatprm objid,"name",x,y,z			マテリアルのパラメーター設定
-	gpmatprm objid,"name",value			マテリアルのパラメーター設定(2)
-	gpmatprm objid,"name",x,y,z,w			マテリアルのパラメーター設定(3)
+	gpmatprm1 objid,"name",value			マテリアルのパラメーター設定(2)
+	gpmatprm4 objid,"name",x,y,z,w			マテリアルのパラメーター設定(3)
+	gpmatprm16 objid,"name",var			マテリアルのパラメーター設定(マトリクス)
+	gpmatprmt objid,"name","filename"		マテリアルのパラメーター設定(テクスチャ)
 	gpmatstate objid,"name","value"			マテリアルのステート設定
 
 	gpbox var,size,color,matobj			箱ノードを生成
