--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -693,7 +693,12 @@
 	(この時、デバイスがネット接続可能な状態であることを確認しておいてください)
 <br><br>
 	以上の準備でAdMobを使用したアプリをビルドすることが可能になります。
+<br><br>
+	AdMobの表示を抑制する場合は、-1を指定することで無効（非表示）にすることができます。
 	</p>
+<pre>
+		devcontrol "AdMob",-1 // AdMobを無効（非表示）にする
+</pre>
 	</ul>
 
 	<ul>
